- object attributes are converted if necessary in AMF0/AMF3 codecs
- "mx.utils.ObjectProxy" objects supported by AMF3 codec (Jira APPSERVER-173)
- "IConnection" objects for Remoting properly store attributes accross
  multiple requests by using sessions
- Remoting headers are accessible through "IConnection.getConnectParams"
- "ByteArray" objects supported (Jira APPSERVER-189)

Bugfixes:
- validate RTMP handshake received from client (Jira APPSERVER-159)
- Array typed parameters are converted correctly (Jira APPSERVER-161)
- RTMPTHandler is wired through Spring (Jira APPSERVER-150)
- fixed concurrency issue in RTMP encoder that could result in wrong
  packet header types (Jira APPSERVER-177)
- IStreamAwareScopeHandler methods are also called for server side streams
- "NetConnection.Connect.AppShutdown" is returned when trying to connect
  to application that currently is unloaded (Jira APPSERVER-13)
- state is properly reset if exceptions occur in package decoding
  (Jira APPSERVER-137)
- numbers outside integer range are correctly serialized in AMF3 codec


Red5 0.6.2  (2007-06-17)
------------------------
Bugfixes:
- "pause" no longer breaks live streams (Jira APPSERVER-136)
- configured subscopes don't get released when a client disconnects
- AMF requests could not be decoded when run in the context root
  (Jira APPSERVER-146)
- fixed bug for Remoting requests without parameters (Jira APPSERVER-147)
- fixed issue with stop/start of war in Tomcat (Jira APPSERVER-155)
- fixed handshake reply for Flash Player 9 Update 3
- IMetaData supports fractional framerates (Jira APPSERVER-157)
- correctly reject empty stream names (Jira APPSERVER-156)
- fixed problem with loading some JAR files from the applications
  classpath (Jira APPSERVER-141)
- fixed decoding of Remoting requests with multiple parameters
  (Jira APPSERVER-151)


Red5 0.6.1  (2007-05-23)
------------------------
New Features:
- Switched to use mina 1.1, more config options in red5.properties